Had to fix some issues with z-index CSS attributes making the map unclickable.

--- a/alongtheway-frontend/src/app/app.component.css
+++ b/alongtheway-frontend/src/app/app.component.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: 60vh;
   margin-top: 2px;
-  z-index: -1;
 }
 
 .column {
@@ -52,9 +51,14 @@ h4 {
 
 p {
   font: 20px Roboto, "Helvetica Neue", sans-serif;
-
-
+  margin-left: 12px;
 }
 
+.searchresults {
+  border-style: solid;
+  border-width: 1px;
+}
 
-
+body {
+  margin-top: 8px;
+}
