--- a/alongtheway-frontend/src/app/header/header.component.css
+++ b/alongtheway-frontend/src/app/header/header.component.css
@@ -1,4 +1,5 @@
 h3.title {
+  color: #94bfff;
   font-size: 30pt;
   display: inline;
   margin-right: 20px;
@@ -8,6 +9,7 @@ h3.title {
 }
 
 .nav {
+  z-index: 1;
   position: sticky;
   top: 0;
   width: 100%;
@@ -35,11 +37,11 @@ h3.title {
   padding: 8px 16px;
   font-size: 18px;
   cursor: pointer;
-  margin-right: 10px;
+  margin-right: 26px;
 }
 
 a {
-  color: white;
+  color: #ebf3ff;
   text-decoration: none;
   margin-left: 18px;
   font-size: 16pt;
@@ -51,8 +53,8 @@ a {
   border-radius: 8px;
   padding-left: 10px;
   padding-right: 10px;
-  -webkit-text-stroke-width: .7px;
-  -webkit-text-stroke-color: black;
+  -webkit-text-stroke-width: .9px;
+  -webkit-text-stroke-color: #2e2e2e;
 }
 
 .nav-links {
@@ -60,10 +62,3 @@ a {
   display: flex;
   align-items: center;
 }
-
-
-
-
-
-
-
